--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PROGJAR</title>
+	<title>index.html</title>
 </head>
 <body>
-	<p>progjar</p>
-	<p>go to <a href="/dataset">dataset</a></p>
-	<p>go to <a href="http://gist.github.com/studiawan">gist pak hudan</a></p>
+	THIS IS INDEX.HTML
 </body>
 </html>
